fix: fix reasons on mobile

--- a/frontend/components/Donation/Donation.module.css
+++ b/frontend/components/Donation/Donation.module.css
@@ -4,7 +4,6 @@
 	min-width: 360px;
 	font-family: 'Inter', sans-serif;
 	font-style: normal;
-	--linear-anim: all .2s linear;
 }
 .donate__title {
 	font-family: 'Sreda', serif;
@@ -38,6 +37,7 @@
 }
 .donate__reasonsTitle {
 	margin: 42px auto 0;
+	border-radius: 5px;
 	font-family: 'Sreda';
 	font-style: normal;
 	font-weight: 400;
@@ -131,7 +131,6 @@
 	background-color: inherit;
 	border: none;
 	padding: 0 6px 12px;
-	transition: var(--linear-anim);
 }
 .donate__formSwitcher_type_active {
 	color: var(--Orange-300);
@@ -159,7 +158,7 @@
 }
 .donate__donationContainer {
 	grid-area: donation-row1;
-	transition: var(--linear-anim);
+	transition: all 0.2s linear;
 	visibility: visible;
 	opacity: 1;
 	display: flex;
@@ -172,7 +171,7 @@
 	background-color: var(--Cyan-100);
 	border: none;
 	padding: 0;
-	transition: var(--linear-anim);
+	transition: all 0.2s linear;
 	border-radius: 5px;
 	width: 100vw;
 	height: 56px;
@@ -195,7 +194,7 @@
 	flex-direction: column;
 	text-align: left;
 	grid-area: donation-row2;
-	transition: var(--linear-anim);
+	transition: all 0.2s linear;
 }
 .donate__formLabel:last-of-type {
 	justify-content: space-between;
@@ -264,7 +263,7 @@
 	background-color: var(--Gradation-200);
 	border: 1px solid var(--Gradation-300);
 	border-radius: 5px;
-	transition: var(--linear-anim);
+	transition: all 0.2s linear;
 }
 .donate__formCheckbox::after {
 	position: absolute;
@@ -275,7 +274,7 @@
 	right: 15px;
 	border-radius: 2.5px;
 	background-color: var(--Gradation-400);
-	transition: var(--linear-anim);
+	transition: all 0.2s linear;
 }
 .donate__formCheckbox:checked::before {
 	background-color: var(--Orange-300);
@@ -325,6 +324,15 @@
 	font-weight: 500;
 	text-decoration: none;
 	border-bottom: 1px solid var(--Gradation-500);
+}
+.donate__formSwitcher, .donate__formRadio, .donate__button, .donate__formDonation {
+	transition: all 0.2s linear;
+}
+.donate__formSwitcher:hover, .donate__formRadio:hover, .donate__button:hover, .donate__formDonation:hover {
+	opacity: .8;
+}
+.donate__formDonation:hover {
+
 }
 @media screen and (max-width: 1010px) {
 	.donate__title {
@@ -380,6 +388,15 @@
 	}
 }
 @media screen and (max-width: 768px) {
+	.donate__reasons {		
+    padding-top: 31px;
+    margin-bottom: 14px;
+
+	}
+	.donate__reason {
+		gap: 20px;
+    padding: 16px 0 16px 8px
+	}
 	.donate__container {
     width: 100%;
 		padding: 20px 0 20px;
